# speedrun_final_malware_course

./: Makefile  README.md  docker-compose.yml  env.txt  implant.proto  postinstall.sh
implant/: Makefile  implant.c  implant.pb.c  implant.pb.h
implant/include/: .clangd  debug.h  implant.h
speedrun/: pyproject.toml
speedrun/instance/: c2.db
speedrun/speedrun/: admin.py  app.py  build_app.py  client.py  db.py  implant_pb2.py  models.py  rpc.py
